# square_ttthree

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  sample.config.ini
.github/workflows/: pytest.yaml
api/: auth.py  config.py  database.py  main.py  models.py  schemas.py  test_client.py  websocket_manager.py
square_ttthree/: config.py  configuration.py  main.py  messages.py
square_ttthree/data/: config.sample.ini  config.testing.sample.ini
square_ttthree/logic/: core.py
square_ttthree/models/: core.py
square_ttthree/routes/: core.py
tests/: conftest.py  test_dummy.py  test_main.py
training/: agent.py  debug_learning.py  environment.py  test_agent.py  train.py
training/models/: ttthree_easy.json  ttthree_hard.json  ttthree_medium.json
