[project]
name = "square_ttthree"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "sqlalchemy>=2.0.51",
    "square-commons>=3.2.0",
    "square-logger>=3.0.4",
    "tqdm>=4.68.4",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]
