[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project]
name = "square_ttthree"
version = "1.0.0"
description = "api and training scripts for my ttthree (tic-tac-toe game)."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "GPLv3" }
authors = [
    { name = "Parth Mukesh Mangtani", email = "thepmsquare@gmail.com" },
]
urls = { homepage = "https://github.com/thepmsquare/square_ttthree" }
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "httpx2>=0.28.1",
    "sqlalchemy>=2.0.51",
    "square-commons>=3.2.0",
    "square-logger>=3.0.4",
    "tqdm>=4.68.4",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.build-backend]
module-name = "square_ttthree"
module-root = ""
source-include = ["square_ttthree/data/*"]
